--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=".exports/v1.0/web/index.html"
+export_path=".exports/postcompo1/web/index.html"
 script_export_mode=1
 script_encryption_key=""
 
